# SCOPE

./: .gitignore  CMakeLists.txt  README.md
examples/: README.md  run_scope_examples.sh
examples/results/supervised/: supervised_example_1k_Phat.txt  supervised_example_1k_Qhat.txt
examples/results/unsupervised/: unsupervised_example_1k_Phat.txt  unsupervised_example_1k_Qhat.txt  unsupervised_example_1k_V.txt
examples/source_files/: example_1k.bed  example_1k.fam  example_1k.plink.freq  example_1k_allele_frequencies.txt  example_1k_proportions.txt
include/: alstructure.h  arguments.h  config.h  genotype.h  helper.h  mailman.h  matmult.h  propca.h  storage.h
misc/assessment/: README.md  metrics.R  visualize.R
misc/real_data/: README.md
misc/real_data/HGDP/: get_HGDP.sh
misc/real_data/HO/: convertf  ho_remove.samps  prepare_ho.sh
misc/real_data/TGP/: gen_tgp_plink_metrics.sh  get_tgp.sh  tgp_pops.txt  tgp_super_pops.txt
misc/real_data/UKB/: long_range_ld.filter  prepare_ukb.sh
misc/simulations/: README.md  generate_plink_frq.py  generate_simulations_python.sh  install_packages.sh  simulateA.py  simulateB.py
src/: alstructure.cpp  genotype.cpp  matmult.cpp  propca.cpp  run_alstructure.cpp  run_propca.cpp  storage.cpp
